@@ -1,6 +1,6 @@
 menu (2.1.15) unstable; urgency=low
 
-  *  The "unreleased" release 
+  * The "unreleased" release 
   * Update Italian menu-section translation. Thanks Stefano Canepa.
   * Morten Brix Pedersen:
     - Fix wrong error message when install-menu couldn't open a menu-method.
@@ -9,6 +9,7 @@ menu (2.1.15) unstable; urgency=low
     - Call getuid() once and cache the result.
   * Sort menu entry according to the current locale. Note that this works
     only if the menu-method uses the locale encoding. Closes: #200447.
+  * Fix error message for update-menus --menumethod.  Closes: #251857.
 
  -- Bill Allombert <ballombe@debian.org>  Thu, 27 May 2004 19:59:24 +0200
 
